# Molecular-generation-GFlowNet

./: config.py  generate_molecules.py  notes.txt  online_trainer.py  pyproject.toml  readme.md  requirements.txt  sql_reader.py  trainer.py
algo/: config.py  graph_sampling.py  trajectory_balance.py
data/: data_source.py  replay_buffer.py
envs/: frag_mol_env.py  graph_building_env.py
gflownet/: __init__.py  online_trainer.py  trainer.py
gflownet/algo/: config.py  graph_sampling.py  trajectory_balance.py
gflownet/data/: data_source.py  replay_buffer.py
gflownet/envs/: frag_mol_env.py  graph_building_env.py
gflownet/models/: bengio2021flow.py  config.py  graph_transformer.py
gflownet/tasks/: config.py  logp.py  seh_frag.py
gflownet/utils/: conditioning.py  config.py  focus_model.py  metrics.py  sqlite_log.py  transforms.py
models/: bengio2021flow.py  config.py  graph_transformer.py
mpnn/: mpnn.py
tasks/: config.py  seh_frag.py
utils/: conditioning.py  config.py  focus_model.py  misc.py  multiprocessing_proxy.py  transforms.py
