[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
# This tells setuptools to automatically find your packages
include = ["gflownet*", "mpnn*"] 